2011-11-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_filled_polygon): Use boxfill for filled polygons
	which are actually rectangles.

	* src/win/wgnuplib.h src/win/wgraph.c: 	Add support in windows terminal
	for toggling individual plots on/off by clicking on the corresponding
	key sample in addition to toggling via toolbar buttons.

2011-11-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_degreesign):  More attempts to work around oddities in
	Solaris locale handling.

2011-11-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff: Sync to docs version 1.699.

	* docs/gnuplot.doc term/be.trm term/cairo.trm term/context.trm
	term/win.trm: Fix typos.

2011-11-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/command.c src/eval.c src/gadgets.c src/graphics.c
	src/internal.c src/tables.c src/unset.c src/util.c src/util.h
	term/post.trm:  Fix or remove some FIXMEs.

2011-11-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* doc/gnuplot.doc: New terminal driver epscairo.

	* term/gd.trm: Don't use gd font pointer variables for builtin fonts.

2011-11-08  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/set.c: Use nl_langinfo(CODESET) to find the encoding.
	This hopefully works around non-standard encoding names used by Solaris.

	* src/wxterminal/wxt_gui.cpp: Toggle for "plot ... with circles"

2011-11-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* doc/gnuplot.doc [New features]: Document new cairolatex and
	revised windows terminal.

2010-11-08  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/set.c (set_degreesign): Move include of iconv.h to top level.

2011-11-07  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/fig.trm: Update help on font option.

	* term/context.trm: Avoid use of round() because MSVC is still not
	C99-compliant.

	New terminal driver cairolatex, which uses the cairo EPS or PDF
	backend for graphics output and LaTeX text created by functions